<resources>
    <string name="app_name">Exercise1</string>
    <string name="LoginVer">Icon</string>
    <string name="Email">Masukkan Email</string>
    <string name="Password">Masukkan Password</string>
    <string name="BtnLogin">Login</string>
    <string name="belum_terdaftar">Belum Terdaftar?</string>
    <string name="TextLP">Lupa Password</string>
    <string name="Pendaf">Pendaftaran</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="Nama">Masukkan Nama</string>
    <string name="Alamat">Masukkan Alamat</string>
    <string name="Lpass">Lihat Password</string>
    <string name="LAlamat">Lihat alamat</string>
    <string name="Lemail">Lihat Email</string>
    <string name="KNama">Kolom Nama</string>
    <string name="KLpass">Lihat password</string>
    <string name="Kpass">Masukkan Kembali Password</string>
    <string name="Batal">Batal</string>
    <string name="Daftar">Daftar</string>
    <string name="Ag">Agama: </string>
    <string name="Jk">Jenis Kelamin</string>
    <string name="G1">GAgama1</string>
    <string name="IS">Islam</string>
    <string name="KT">Katolik</string>
    <string name="KS">Kristen</string>
    <string name="G2">GAgama2</string>
    <string name="HI">Hindu</string>
    <string name="BD">Buddha</string>
    <string name="Kong">Konghucu</string>
    <string name="LJK">Jenis Kelamin: </string>
    <string name="Lk">Laki-Laki</string>
    <string name="Pr">Perempuan</string>
    <string name="Pk">Penganut Kepercayaan</string>
    <string name="Dk">Data Kontak</string>
    <string name="NI">Nama Item</string>
    <string name="DTK">Detail Kontak</string>
    <string name="NM">Nama</string>
    <string name="NT">Nomor Telepon</string>
    <string name="PECN">Lihat Pencarian</string>
    <string name="PEC">Masukkan Kata Pencarian</string>
    <string name="LK">List Kontak</string>
    <string name="LD">Lihat Data</string>
    <string name="ED">Edit Data</string>
</resources>