<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Pendaf"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/Pendaf"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="#000000" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/KNama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/Nama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/Nama"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LAlamat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/Alamat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:autofillHints=""
                android:hint="@string/Alamat"
                android:inputType="text|textPostalAddress"
                android:maxLines="3"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/LJK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/LJK" />

            <RadioGroup
                android:id="@+id/Jk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Lk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Lk" />

                <RadioButton
                    android:id="@+id/Pr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pr" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Ag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Ag" />

            <RadioGroup
                android:id="@+id/GAgama1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/IS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IS" />

                <RadioButton
                    android:id="@+id/KT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/KT" />

                <RadioButton
                    android:id="@+id/KS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/KS" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/GAgama2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/HI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HI" />

                <RadioButton
                    android:id="@+id/BD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BD" />

                <RadioButton
                    android:id="@+id/Kong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Kong" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/Pk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Pk" />
            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Lemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/Email"
                android:inputType="textPersonName|textEmailSubject"
                android:maxLines="1"
                android:singleLine="true"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Lpass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/Password"
                android:inputType="textPassword|numberPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/KLpass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Kpass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:hint="@string/KLpass"
                android:inputType="text|numberPassword|textWebPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Batal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1053609152.000000"
                android:text="@string/Batal"
                app:cornerRadius="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1053609152.000000"
                android:text="@string/Daftar"
                app:cornerRadius="5dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>