<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background1"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="181dp"
        android:layout_height="144dp"
        android:contentDescription="@string/LoginVer"
        android:src="@drawable/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="278dp"
        android:background="@drawable/background2"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.192">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Lemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@drawable/formuser"
                android:drawableStart="@drawable/user"
                android:hint="@string/Email"
                android:inputType="text|textEmailAddress"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Lpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:autofillHints=""
                android:background="@drawable/formuser"
                android:drawableStart="@drawable/pass"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/TextLP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/lupa_password" />

        <Button
            android:id="@+id/Login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background2"
            android:text="@string/BtnLogin"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:onClick=".ExerciseForm"
            tools:ignore="OnClick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/belum_terdaftar"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>